Refactored position embedding, OPT, Mistral, NEOX (still not perfect)